setup mongo, redis and unique key generation.

--- a/.env.sample
+++ b/.env.sample
@@ -36,6 +36,13 @@ TENANT_ID=
 CLIENT_ID=
 CLIENT_SECRET=
 
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+MIN_REDIS_VERSION='7.0.0'
+
+MIN_MONGO_VERSION='8.0.0'
+MONGO_CONNECTION_URI=mongodb://localhost:27017/
+
 ########################################
 #### Frontend Environment Variables ####
 ########################################
