--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "intellicode",
         "Karan",
         "kisstkondoros",
+        "maxlength",
         "MITM",
         "nestjs",
         "nrwl",
