--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
         "@nestjs/common": "^10.4.4",
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.4.4",
+        "@nestjs/mongoose": "^10.0.10",
         "@nestjs/platform-express": "^10.4.4",
         "@nestjs/swagger": "^7.4.2",
         "@nestjs/terminus": "^10.2.3",
         "@nx/nest": "^19.8.4",
-        "axios": "^1.6.0",
+        "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
@@ -49,9 +50,11 @@
         "express-basic-auth": "^1.2.1",
         "helmet": "^7.1.0",
         "moment": "^2.30.1",
+        "mongoose": "^8.7.1",
         "nest-winston": "^1.9.7",
         "ngx-logger": "^5.0.12",
         "ngx-toastr": "^19.0.0",
+        "redis": "^4.7.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
