--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
         "nrwl",
         "pkief",
         "preinstall",
+        "shortlink",
         "sonarlint",
         "sonarsource",
         "SSHKEY",
