--- a/.env.sample
+++ b/.env.sample
@@ -36,12 +36,13 @@ TENANT_ID=
 CLIENT_ID=
 CLIENT_SECRET=
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=127.0.0.1    #This must be kept inside secret-vault instead of .env
 REDIS_PORT=6379
 MIN_REDIS_VERSION='7.0.0'
 
 MIN_MONGO_VERSION='8.0.0'
-MONGO_CONNECTION_URI=mongodb://localhost:27017/
+MONGO_CONNECTION_URI=mongodb://localhost:27017/ #This must be kept inside secret-vault instead of .env
+MONGO_DB_NAME=simple-url    #This must be kept inside secret-vault instead of .env
 
 ########################################
 #### Frontend Environment Variables ####
