--- a/.github/workflows/backend-pipeline.yml
+++ b/.github/workflows/backend-pipeline.yml
@@ -78,6 +78,12 @@ jobs:
                   case $GITHUB_REF in
                     refs/heads/develop)
                       echo "APP_ENV=DEV" >> $GITHUB_ENV
+                      echo "REDIS_HOST=redis" >> $GITHUB_ENV
+                      echo "REDIS_PORT=6379" >> $GITHUB_ENV
+                      echo "MIN_REDIS_VERSION=7.0.0" >> $GITHUB_ENV
+                      echo "MIN_MONGO_VERSION=8.0.0" >> $GITHUB_ENV
+                      echo "MONGO_CONNECTION_URI=mongodb://mongo:27017/" >> $GITHUB_ENV
+                      echo "MONGO_DB_NAME=simple-url" >> $GITHUB_ENV
                       echo "PORT_BACKEND=8000" >> $GITHUB_ENV
                       echo "PORT_FRONTEND=80" >> $GITHUB_ENV
                       echo "DOCKER_TAG=develop" >> $GITHUB_ENV
@@ -95,6 +101,12 @@ jobs:
                       ;;
                     refs/heads/uat)
                       echo "APP_ENV=UAT" >> $GITHUB_ENV
+                      echo "REDIS_HOST=redis" >> $GITHUB_ENV
+                      echo "REDIS_PORT=6379" >> $GITHUB_ENV
+                      echo "MIN_REDIS_VERSION=7.0.0" >> $GITHUB_ENV
+                      echo "MIN_MONGO_VERSION=8.0.0" >> $GITHUB_ENV
+                      echo "MONGO_CONNECTION_URI=mongodb://mongo:27017/" >> $GITHUB_ENV
+                      echo "MONGO_DB_NAME=simple-url" >> $GITHUB_ENV
                       echo "PORT_BACKEND=8000" >> $GITHUB_ENV
                       echo "PORT_FRONTEND=80" >> $GITHUB_ENV
                       echo "DOCKER_TAG=uat" >> $GITHUB_ENV
@@ -112,6 +124,12 @@ jobs:
                       ;;
                     refs/heads/main)
                       echo "APP_ENV=PROD" >> $GITHUB_ENV
+                      echo "REDIS_HOST=redis" >> $GITHUB_ENV
+                      echo "REDIS_PORT=6379" >> $GITHUB_ENV
+                      echo "MIN_REDIS_VERSION=7.0.0" >> $GITHUB_ENV
+                      echo "MIN_MONGO_VERSION=8.0.0" >> $GITHUB_ENV
+                      echo "MONGO_CONNECTION_URI=mongodb://mongo:27017/" >> $GITHUB_ENV
+                      echo "MONGO_DB_NAME=simple-url" >> $GITHUB_ENV
                       echo "PORT_BACKEND=8000" >> $GITHUB_ENV
                       echo "PORT_FRONTEND=80" >> $GITHUB_ENV
                       echo "DOCKER_TAG=prod" >> $GITHUB_ENV
@@ -137,59 +155,83 @@ jobs:
                   key: ${{ env.SERVER_PRIVATE_SSH_KEY }}
                   passphrase: ${{ env.SERVER_PASS_PHRASE }}
                   script: |
-                      # Check if Docker is installed
+                      # Ensure Docker is installed
                       if ! command -v docker &> /dev/null; then
                           echo "Docker not found, installing..."
-
-                          # Install Docker
                           curl -fsSL https://get.docker.com -o get-docker.sh
                           sh get-docker.sh
                       else
                           echo "Docker is already installed."
                       fi
 
-                      # Pull the latest image
-                      docker pull ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }}
+                      # Function to create Docker volume if it does not exist
+                      create_volume_if_not_exists() {
+                          local VOLUME_NAME=$1
+                          if [[ $(docker volume ls -q -f name=^${VOLUME_NAME}$) ]]; then
+                              echo "Volume '${VOLUME_NAME}' already exists. Skipping creation."
+                          else
+                              echo "Creating volume '${VOLUME_NAME}'..."
+                              docker volume create "${VOLUME_NAME}" || {
+                                  echo "Error: Failed to create volume '${VOLUME_NAME}'."; exit 1;
+                              }
+                          fi
+                      }
 
-                      # Check if the container is running
-                      if [ "$(docker ps -q -f name=backend)" ]; then
-                          # Stop and remove the old container if it exists
-                          docker stop backend
-                          docker rm backend
-                      fi
+                      # Function to create Docker network if it does not exist
+                      create_network_if_not_exists() {
+                          local NETWORK_NAME=$1
+                          docker network inspect ${NETWORK_NAME} >/dev/null 2>&1 || {
+                              echo "Creating Docker network '${NETWORK_NAME}'..."
+                              docker network create ${NETWORK_NAME} || {
+                                  echo "Error: Failed to create network '${NETWORK_NAME}'."; exit 1;
+                              }
+                          }
+                      }
 
-                      # Run the new container
-                      docker run -d \
-                        --restart always \
-                        --name backend \
-                        -p ${{ env.PORT_BACKEND }}:${{ env.PORT_BACKEND }} \
-                        -e APP_ENV=${{ env.APP_ENV }} \
-                        -e PORT_BACKEND=${{ env.PORT_BACKEND }} \
-                        -e PORT_FRONTEND=${{ env.PORT_FRONTEND }} \
-                        -e ROUTE_PREFIX=${{ env.ROUTE_PREFIX }} \
-                        -e KEY_VAULT_URI=${{ env.KEY_VAULT_URI }} \
-                        -e TENANT_ID=${{ env.TENANT_ID }} \
-                        -e CLIENT_ID=${{ env.CLIENT_ID }} \
-                        -e CLIENT_SECRET=${{ env.CLIENT_SECRET }} \
-                        ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }}
+                      # Function to set up Redis container if not running
+                      setup_redis() {
+                          if [ ! "$(docker ps -q -f name=redis)" ]; then
+                              echo "Setting up Redis container..."
+                              docker run -d --name redis --network backend_network --restart always \
+                                -v redis_data:/app/redis-data redis:7 || {
+                                  echo "Error: Failed to start Redis container."; exit 1;
+                              }
+                              echo "Redis container started."
+                          else
+                              echo "Redis container already running."
+                          fi
+                      }
 
-                      # Check if the new container started successfully
-                      if [ "$(docker ps -q -f name=backend)" ]; then
-                          echo "Backend container started successfully."
-                      else
-                          echo "New backend container failed to start. Rolling back to backup..."
+                      # Function to set up Mongo container if not running
+                      setup_mongo() {
+                          if [ ! "$(docker ps -q -f name=mongo)" ]; then
+                              echo "Setting up Mongo container..."
+                              docker run -d --name mongo --network backend_network --restart always \
+                                -v mongo_data:/data/db mongo:8 || {
+                                  echo "Error: Failed to start Mongo container."; exit 1;
+                              }
+                              echo "Mongo container started."
+                          else
+                              echo "Mongo container already running."
+                          fi
+                      }
 
-                          # Stop and remove failed container (if it exists)
-                          docker stop backend || true
-                          docker rm backend || true
+                      # Function to deploy backend container
+                      deploy_backend() {
+                          echo "Pulling latest backend image..."
+                          docker pull ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }} || {
+                              echo "Error: Failed to pull backend image."; exit 1;
+                          }
 
-                          # Pull the latest image
-                          docker pull ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }}_backup
+                          if [ "$(docker ps -q -f name=backend)" ]; then
+                              echo "Stopping and removing old backend container..."
+                              docker stop backend && docker rm backend || {
+                                  echo "Error: Failed to stop/remove backend container."; exit 1;
+                              }
+                          fi
 
-                          # Start the previous backed-up container
-                          docker run -d \
-                            --restart always \
-                            --name backend \
+                          echo "Starting new backend container..."
+                          docker run -d --restart always --name backend --network backend_network \
                             -p ${{ env.PORT_BACKEND }}:${{ env.PORT_BACKEND }} \
                             -e APP_ENV=${{ env.APP_ENV }} \
                             -e PORT_BACKEND=${{ env.PORT_BACKEND }} \
@@ -199,10 +241,69 @@ jobs:
                             -e TENANT_ID=${{ env.TENANT_ID }} \
                             -e CLIENT_ID=${{ env.CLIENT_ID }} \
                             -e CLIENT_SECRET=${{ env.CLIENT_SECRET }} \
-                            ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }}_backup
+                            -e REDIS_HOST=${{ env.REDIS_HOST }} \
+                            -e REDIS_PORT=${{ env.REDIS_PORT }} \
+                            -e MIN_REDIS_VERSION=${{ env.MIN_REDIS_VERSION }} \
+                            -e MIN_MONGO_VERSION=${{ env.MIN_MONGO_VERSION }} \
+                            -e MONGO_CONNECTION_URI=${{ env.MONGO_CONNECTION_URI }} \
+                            -e MONGO_DB_NAME=${{ env.MONGO_DB_NAME }} \
+                            ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }} || {
+                              echo "Error: Failed to start new backend container."; exit 1;
+                          }
 
-                          echo "Rolled back to the previous backend container."
-                      fi
+                          echo "Backend container started successfully."
+                      }
+
+                      # Function to roll back to backup backend container
+                      rollback_backend() {
+                          echo "Rolling back to backup backend container..."
+                          docker pull ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }}_backup || {
+                              echo "Error: Failed to pull backup backend image."; exit 1;
+                          }
+
+                          # Stop and remove failed container (if it exists)
+                          docker stop backend || true
+                          docker rm backend || true
+
+                          docker run -d --restart always --name backend --network backend_network \
+                            -p ${{ env.PORT_BACKEND }}:${{ env.PORT_BACKEND }} \
+                            -e APP_ENV=${{ env.APP_ENV }} \
+                            -e PORT_BACKEND=${{ env.PORT_BACKEND }} \
+                            -e PORT_FRONTEND=${{ env.PORT_FRONTEND }} \
+                            -e ROUTE_PREFIX=${{ env.ROUTE_PREFIX }} \
+                            -e KEY_VAULT_URI=${{ env.KEY_VAULT_URI }} \
+                            -e TENANT_ID=${{ env.TENANT_ID }} \
+                            -e CLIENT_ID=${{ env.CLIENT_ID }} \
+                            -e CLIENT_SECRET=${{ env.CLIENT_SECRET }} \
+                            -e REDIS_HOST=${{ env.REDIS_HOST }} \
+                            -e REDIS_PORT=${{ env.REDIS_PORT }} \
+                            -e MIN_REDIS_VERSION=${{ env.MIN_REDIS_VERSION }} \
+                            -e MIN_MONGO_VERSION=${{ env.MIN_MONGO_VERSION }} \
+                            -e MONGO_CONNECTION_URI=${{ env.MONGO_CONNECTION_URI }} \
+                            -e MONGO_DB_NAME=${{ env.MONGO_DB_NAME }} \
+                            ${{ secrets.DOCKER_USERNAME }}/backend:${{ env.DOCKER_TAG }}_backup || {
+                              echo "Error: Failed to roll back to backup backend container."; exit 1;
+                          }
+
+                          echo "Rolled back to backup backend container."
+                      }
+
+                      # Create necessary volumes
+                      create_volume_if_not_exists "source_code_volume"
+                      create_volume_if_not_exists "redis_data"
+                      create_volume_if_not_exists "mongo_data"
+
+                      # Create necessary network
+                      create_network_if_not_exists "backend_network"
+
+                      # Set up Redis container
+                      setup_redis
+
+                      # Set up Mongo container
+                      setup_mongo
+
+                      # Deploy backend container
+                      deploy_backend || rollback_backend
 
                       # Remove old backend images (dangling images)
                       docker images --filter "dangling=true" --format "{{.ID}}" | xargs -r docker rmi || true
