--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "DDTHH",
         "devkit",
         "Dockerized",
+        "drawio",
         "eamodio",
         "elif",
         "esac",
