--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
         "nrwl",
         "pkief",
         "preinstall",
+        "qrcode",
         "shortlink",
         "sonarlint",
         "sonarsource",
