--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -30,7 +30,8 @@
                 ],
                 "styles": [
                     "apps/frontend/src/styles.scss",
-                    "node_modules/bootstrap/scss/bootstrap.scss"
+                    "node_modules/bootstrap/scss/bootstrap.scss",
+                    "node_modules/ngx-toastr/toastr.css"
                 ],
                 "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
             },
