--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "nest-winston": "^1.9.7",
         "ngx-logger": "^5.0.12",
         "ngx-toastr": "^19.0.0",
+        "qrcode": "^1.5.4",
         "redis": "^4.7.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~7.8.0",
@@ -92,6 +93,7 @@
         "@types/crypto-js": "^4.2.2",
         "@types/jest": "^29.5.12",
         "@types/node": "18.16.9",
+        "@types/qrcode": "^1.5.5",
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
