--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@nx/nest": "^19.8.4",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cluster": "^0.7.7",
